--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 .header{
     background: url("../img/header_bg.png")center/cover no-repeat;
+    height: 1070px;
+
 
 /*458 983*/
 }
@@ -15,8 +17,18 @@
     height: 40px;
 }
 .shadow{
-    background-color: rgba();
+    background: black;
     height: 983px;
     width: 458px;
+    opacity: 0.5;
+    border-radius: 5px;
+}
+.nav{
+    float: right;
+}
+.qrfid img{
+    margin-top: 104px;
+
+
 
 }
