--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 body{
     color: #ffff;
+    display: flex;
+    flex-direction: column;
+    
 }
 
 .header{
@@ -33,7 +36,20 @@ body{
     justify-content: space-between;
 }
 .menu-nav{
+    display: flex;
+    margin: 0 auto;
+    align-items: center;
+}
+.menu-nav li{
+    padding: 5px;
+}
 
+.login{    /* Выравнивание в одну линию ссылки с иконкой ссылки */
+    display: flex;
+    align-items: center;
+    flex-flow: row nowrap;
+}
+.login img{
 }
 .menu li {
     list-style: none;
@@ -54,4 +70,11 @@ body{
     font-size: 16px;
     border-radius: 25px;
     padding: 7px;
+}
+.main{
+    flex: 1 0 auto;
+}
+
+.footer{
+    flex-shrink: 0;
 }
