--- a/css/style.css
+++ b/css/style.css
@@ -110,3 +110,29 @@ li a {
 	background-color: #ff5656;
 	color: #fff;
 }
+.info-block {
+	position: absolute;
+	width: 460px;
+	display: flex;
+	justify-content: space-around;
+	background-color: black;
+	opacity: .7;
+}
+.block-bangle  {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.bangle  {
+	border-bottom: 3px solid #fff;
+	width: 105px;
+}
+.info-block h2 {
+	font-size: 34px;
+	font-weight: 300;
+	color: white;
+	text-align: center;
+}
+.info-block img {
+	padding-top: 21px;
+}
