--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,11 @@ li a {
 	flex-direction: column;
 	align-items: center;
 }
+.bangle1 {
+	border-bottom: 1px solid #fff;
+	padding: 0px 30px 30px 30px;
+	margin-bottom: 0;
+}
 .bangle  {
 	border-bottom: 3px solid #fff;
 	width: 105px;
