--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ li a {
 
 
 .main-page{
+	position: relative;
 	background-image: url(../img/header_bg.png);
 	background-position: center;
 	background-size: cover;
@@ -115,13 +116,15 @@ li a {
 	width: 460px;
 	display: flex;
 	justify-content: space-around;
-	background-color: black;
+    background-color: black;
+	/*background-color: rgba(0,0,0,0.1);*/
 	opacity: .7;
 }
 .block-bangle  {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+    opacity: 0.5;
 }
 .bangle1 {
 	border-bottom: 1px solid #fff;
