--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
-body{
+body {
     font-family: 'Roboto', sans-serif;
-	margin: 0;
-	padding: 0;
+
 }
 body ul {
     padding: 0;
@@ -23,6 +22,8 @@ button {
 ::before,
 ::after {
 	box-sizing: inherit;
+	margin: 0;
+	padding: 0;
 }
 .container {
 	box-sizing: border-box;
@@ -236,7 +237,7 @@ button {
 }
 .advantages {
 	display: flex;
-	flex-basis: 30%;
+	justify-content: space-between;
 }
 .advantages span {
 	color: #008cce;
@@ -245,14 +246,33 @@ button {
 	padding-top: 50px;
 }
 .promo-block {
+	position: relative;
+	/*border: 1px solid ;*/
 	display: flex;
+	flex-basis: 30%;
 	flex-direction: column;
 	text-align: center;
 }
 .promo-block p {
-	padding: 34px;
+	color: #676767;
+	font-size: 18px;
+	font-weight: 300;
+	padding: 34px 30px 40px;
 }
-
+.heartrate:after {
+	content: url("../img/heart_rate.png");
+	display: inline-block;
+	position: absolute;
+	right: 343px;
+	top: 70px;
+}
+.heartrate:before {
+	content: url("../img/heart_rate.png");
+	display: inline-block;
+	position: absolute;
+	left: 343px;
+	top: 70px;
+}
 
 
 
