--- a/css/style.css
+++ b/css/style.css
@@ -292,18 +292,68 @@ button {
 	justify-content: space-between;
 }
 .for-whom {
+	display: block;
 	position: relative;
-	flex-basis: 40%;
-	text-align: center;
+	width: 555px;
+	height: 405px;
+	margin-bottom: 30px;
+}
+.info {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
 }
 .about-from {
 	display: flex;
+	justify-content: space-around;
+	background-color: white;
+	height: 100px;
+	align-items: center;
+}
+.red-bangle {
+	position: absolute;
+	left: 0;
+	bottom: 215px;
+	display: block;
+	text-align: center;
+	height: 135px;
+}
+.red-bangle img {
+	height: 100%;
+}
+.scroll {
+	display: flex;
 	justify-content: space-between;
-	color: #585858;
+	padding-bottom: 50px;
+}
+.footer-container {
+	width: 1170px;
+	padding-left: 15px;
+	padding-right: 15px;
+	margin: 0 auto;
+}
+.footer {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 95px;
+	color: #203352;
+}
+.footer h3 {
+	font-weight: bold;
+	font-size: 16px;
+}
+.footer a {
+	font-weight: bold;
+	font-size: 16px;
+	text-decoration: none;
+	color: #203352;
+	transition: 0.5s ease all;
+}
+.footer a:hover {
+	color: #ff5656;
 
 }
-
-
 
 
 
