--- a/css/style.css
+++ b/css/style.css
@@ -377,11 +377,22 @@ button {
 /*Медиазапросы*/
 
 @media screen and (max-width: 425px) {
+	.main-page {
+		width: 100%;
+		height: 900px;
+	}
+	.container {
+		max-width: 1170px;
+		padding: 0 15px;
+		margin: 0 auto;
+		width: 100%;
+	}
     .header {
 		padding: 0;
 		width: 395px;
-        height: 180px;
+        height: 190px;
 		flex-direction: column;
+		font-size: 15px;
     }
     .logo {
         width: 243px;
@@ -397,15 +408,24 @@ button {
 		height: 50px;
 		align-items: center;
 	}
+	.lang-select {
+		padding: 7px;
+
+	}
 	.scan {
 		display: block;
-		color: #203352;
+		color: #fff;
 		padding: 10px;
 		border-radius: 50px;
-		font-weight: 600;
+		font-weight: 400;
+		margin-bottom: 10px;
+		width: 200px;
+		background-color: #ff5656;
+		font-size: 20px;
 	}
     .bg {
-        width: 395px;
+        width: 100%;
+		height: 710px;
     }
     .bangle h2 {
         font-size: 15px;
@@ -415,11 +435,11 @@ button {
         padding: 15px 0 10px 0;
     }
     .bangles {
-        width: 395px;
+        width: 100%;
         padding: 0 40px 0 65px;
     }
     .bangle-image img {
-        height: 210px;
+        height: 150px;
     }
     .description p {
         font-size: 15px;
@@ -428,8 +448,11 @@ button {
     .description {
         width: 395px;
         padding: 0 45px;
-
     }
+	.sale {
+		position: absolute;
+		right: 0;
+	}
 }
 
 
