--- a/css/style.css
+++ b/css/style.css
@@ -337,7 +337,7 @@ button {
 .red-bangle img {
 	height: 100%;
 }
-.scroll {
+.inline-image {
 	display: flex;
 	justify-content: space-between;
 	padding-bottom: 50px;
@@ -381,106 +381,10 @@ button {
 /*Медиазапросы*/
 
 @media screen and (max-width: 425px) {
-	.main-page {
-		width: 100%;
-		height: 900px;
-	}
-	.container {
-		max-width: 1170px;
-		padding: 0 15px;
-		margin: 0 auto;
-		width: 100%;
-	}
-    .header {
-		padding: 0;
-		width: 395px;
-        height: 190px;
-		flex-direction: column;
-		font-size: 15px;
-    }
-    .logo {
-        width: 243px;
-        height: 93px;
-		margin: 0 auto;
-    }
-	.nav-menu {
-		padding: 5px 0 10px;
-		align-items: center;
-	}
-	.menu {
-		width: 200px;
-		height: 50px;
-		align-items: center;
-	}
-	.lang-select {
-		padding: 7px;
-
-	}
-	.scan {
-		display: block;
-		color: #fff;
-		padding: 10px;
-		border-radius: 50px;
-		font-weight: 400;
-		margin-bottom: 10px;
-		width: 200px;
-		background-color: #ff5656;
-		font-size: 20px;
-	}
-    .bg {
-        width: 100%;
-		height: 710px;
-    }
-    .bangle h2 {
-        font-size: 15px;
-    }
-    .title-item {
-        width: 50px;
-        padding: 15px 0 10px 0;
-    }
-    .bangles {
-        width: 100%;
-        padding: 0 40px 0 65px;
-    }
-    .bangle-image img {
-        height: 150px;
-    }
-    .description p {
-        font-size: 15px;
-        font-weight: 300;
-    }
-    .description {
-        width: 395px;
-        padding: 0 45px;
-    }
-	.sale {
-		position: absolute;
-		right: 0;
-	}
 }
-
-
-
-
 @media screen and (max-width: 1800px){
-	.headline {
-		font-size: 34px;
-	}
-	.sale {
-		bottom: 20px;
-	}
-	.black-bangle img {
-		height: 250px;
-	}
 }
-@media screen and (max-width: 1366px){
-	.title-item {
-		padding-top: 20px;
-	}
-	.description {
-		margin-top: 25px;
-	}
-
+@media screen and (max-width: 1366px) {
 }
 
 
