--- a/css/style.css
+++ b/css/style.css
@@ -202,12 +202,15 @@ button {
 }
 .headline {
 	color: #fff;
-	font-size: 48px;
-	font-weight: 400;
+	font-size: 35px;
+	font-weight: 500;
 	text-transform: uppercase;
 }
 .medid {
 	text-align: right;
+}
+.image-item {
+	height: 100px;
 }
 .btn {
 	display: block;
@@ -278,6 +281,7 @@ button {
 	top: 115px;
 	display: block;
 	text-align: center;
+	height: 230px;
 }
 .black-bangle img {
 	height: 100%;
@@ -418,13 +422,27 @@ button {
 
 
 /*Медиазапросы*/
-
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 1366px) {
 }
 @media screen and (max-width: 1800px){
 }
-@media screen and (max-width: 1366px) {
+@media screen and (max-width: 425px) {
+
+	.container {
+		width: 100%;
+	}
+	.header{
+		display: block;
+	}
+	.bg {
+		width: 100%;
+	}
 }
+@media screen and (max-width: 320px) {
+
+
+}
+
 
 
 
