--- a/css/style.css
+++ b/css/style.css
@@ -324,7 +324,7 @@ button {
 	background-color: white;
 	height: 100px;
 	align-items: center;
-	padding: 0 20px;
+	padding: 0 15px;
 }
 .about-from h3 {
 	color: #585858;
@@ -428,18 +428,22 @@ button {
 
 
 /*Медиазапросы*/
+
 @media all {
 	.container {
 		width: 100%;
 	}
 }
-@media screen and (max-width: 1200px) and (min-width: 1024px){
+@media screen and (max-width: 1200px) {
 	.sale {
 		width: 50%;
 		right: 15px;
 	}
 	.medid-item {
 		width: 80%;
+	}
+	.headline {
+		text-align: end;
 	}
 	.form {
 		padding: 24px 0;
@@ -462,11 +466,54 @@ button {
 	.footer-container {
 		width: 100%;
 	}
-}
-@media (max-width: 1024px) and (min-width: 640px) {
 	.image-item {
 		width: 150px;
 		height: 150px;
+	}
+}
+/*@media screen and (max-width: 1024px) {*/
+
+/*}*/
+@media screen and (max-width: 768px) {
+	.bg {
+		width: 55%;
+	}
+	.bangles {
+		width: 387px;
+	}
+	.bangle-image img{
+		width: 70%;
+	}
+	.description {
+		width: 387px;
+	}
+	.modern {
+		padding: 20px 50px;
+	}
+	.advantages h3 {
+		font-size: 20px;
+		padding-top: 10px;
+	}
+	.heartrate:before {
+		content: "";
+	}
+	.heartrate:after {
+		content: "";
+	}
+	.about-from {
+		height: 60px;
+	}
+	.about-from h3 {
+		width: 180px;
+		font-size: 15px;
+		text-align: left;
+	}
+	.about-from :first-child img {
+		width: 60%;
+	}
+	.image-item {
+		width: 100px;
+		height: 100px;
 	}
 }
 @media screen and (max-width: 425px) {
