--- a/css/style.css
+++ b/css/style.css
@@ -424,7 +424,12 @@ button {
 
 
 /*Медиазапросы*/
-
+/* Смотри 1-й глюк который надо исправить это то что у тебя ползёт вёрстка при уменьшении экрана
+Давай вспоминай. Мы договорились что для ноутбука с разрешением 1366*768 мы будем выводить главный экран во весь
+экран. Помнишь?
+Тогда давай будем логично рассуждать что мы должны сделать?
+Т.е. тебе надо решить задачу все необходимые данные у тебя есть, здесь задачка больше не на знание css а на
+логику. Жду ответа.*/
 
 @media screen and (max-width: 1200px) {
 	.container {
