--- a/css/style.css
+++ b/css/style.css
@@ -321,7 +321,7 @@ button {
 	height: calc(100vw - 30%);
 	margin-bottom: 30px;
 	transition: 0.5s;
-	/*overflow: hidden;*/
+	overflow: hidden;
 }
 .about-from:before {
 	position: absolute;
@@ -348,24 +348,28 @@ button {
 	position: absolute;
 	content: url("../img/btn.png");
 	right: 35px;
-	top: 30px;
+	top: 40px;
 }
 .about-from h3 {
 	color: #585858;
 	font-size: 23px;
 	font-weight: 400;
 	text-align: center;
+	padding: 0 20px;
+}
+.about-from {
+	display: flex;
+	height: 95px;
+	width: 100%;
+	align-items: center;
+	justify-content: center;
 }
 .for-item {
 	width: 100%;
 	height: 380px;
 	background-repeat: no-repeat;
-	background-size: contain;
-	background-position: center;
-}
-.for-item {
-	background-repeat: no-repeat;
 	background-size: cover;
+	background-position: center;
 }
 .old-men {
 	background-image: url("../img/old.png");
@@ -379,6 +383,7 @@ button {
 .traveler {
 	background-image: url("../img/all.png");
 }
+
 .for-whom:hover {
 	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
@@ -465,12 +470,7 @@ button {
 
 
 /*Медиазапросы*/
-/* Смотри 1-й глюк который надо исправить это то что у тебя ползёт вёрстка при уменьшении экрана
-Давай вспоминай. Мы договорились что для ноутбука с разрешением 1366*768 мы будем выводить главный экран во весь
-экран. Помнишь?
-Тогда давай будем логично рассуждать что мы должны сделать?
-Т.е. тебе надо решить задачу все необходимые данные у тебя есть, здесь задачка больше не на знание css а на
-логику. Жду ответа.*/
+
 
 @media screen and (max-width: 1200px) {
 	.medid-item {
@@ -523,6 +523,9 @@ button {
 	.for-whom {
 		width: 60%;
 	}
+	.about-from h3{
+		padding: 0 65px;
+	}
 }
 @media screen and (max-width: 960px) {
 	.medid-item {
@@ -537,6 +540,9 @@ button {
 @media screen and (max-width: 789px) {
 	.medid-item {
 		height: 75px;
+	}
+	.about-from h3 {
+		padding: 0 80px;
 	}
 }
 @media screen and (max-width: 768px) {
@@ -619,7 +625,11 @@ button {
 		margin-top: 15px;
 	}
 }
-
+@media screen and (max-width: 490px){
+	.about-from h3{
+		font-size: 16px;
+	}
+}
 
 
 
